--- a/package.json
+++ b/package.json
@@ -9,6 +9,9 @@
     "@testing-library/react": "^11.2.5",
     "@testing-library/user-event": "^12.6.3",
     "axios": "^0.21.1",
+    "build": "^0.1.4",
+    "gh-pages": "^3.1.0",
+    "npm": "^7.5.2",
     "prettier": "^2.2.1",
     "prop-types": "^15.7.2",
     "react": "^17.0.1",
@@ -28,9 +31,9 @@
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject",
+    "server": "json-server --watch db.json",
     "predeploy": "npm run build",
-    "deploy": "gh-pages -d build",
-    "server": "json-server --watch db.json"
+    "deploy": "gh-pages -d build"
   },
   "eslintConfig": {
     "extends": [
